--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.3.2",
+    "react-burger-menu": "^2.4.4",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
     "styled-components": "^3.2.6"
@@ -13,5 +14,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "standard": {
+    "parser": "babel-eslint"
   }
 }
