--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.3.2",
     "react-burger-menu": "^2.4.4",
     "react-dom": "^16.3.2",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "styled-components": "^3.2.6"
   },
